# src/types/index.ts
@@ -2,7 +2,7 @@ export * from './common/log-level';
 export * from './common/chain-id';
 export * from './common/provider';
 
-export * from './quote/quote-params';
+export * from './quote/swap-quote-query';
 export * from './quote/get-swap-quote-request';
-export * from './quote/get-swap-quote-response';
+export * from './quote/swap-quote-response';
 export * from './quote/swap-quote-liquidity-source';
