# src/types/quote/quote-params.ts
@@ -1,9 +1,0 @@
-export interface QuoteParams {
-  sellToken: string;
-  buyToken: string;
-  sellAmount?: string;
-  buyAmount?: string;
-  takerAddress?: string;
-  slippagePercentage?: string;
-  excludedSources?: string;
-}
